@@ -1,19 +1,19 @@
-#include "Seq/SiteTools.h"
-#include "Seq/Translator.h"
-#include "Seq/SequenceWithQuality.h"
-#include "Seq/DistanceMatrix.h"
 #include "Seq/Site.h"
-#include "Seq/SequenceWithAnnotationTools.h"
-#include "Seq/SymbolListTools.h"
-#include "Seq/SequenceTools.h"
+#include "Seq/DistanceMatrix.h"
 #include "Seq/NucleicAcidsReplication.h"
-#include "Seq/SequenceWithQualityTools.h"
-#include "Seq/SiteExceptions.h"
-#include "Seq/SequenceExceptions.h"
-#include "Seq/Sequence.h"
-#include "Seq/SequenceWithAnnotation.h"
-#include "Seq/StringSequenceTools.h"
-#include "Seq/CodonSiteTools.h"
-#include "Seq/SymbolList.h"
+#include "Seq/SequenceWithAnnotationTools.h"
+#include "Seq/Translator.h"
+#include "Seq/SymbolListTools.h"
 #include "Seq/DNAToRNA.h"
+#include "Seq/SequenceWithQualityTools.h"
+#include "Seq/SequenceWithAnnotation.h"
+#include "Seq/SequenceExceptions.h"
 #include "Seq/SequencePositionIterators.h"
+#include "Seq/SequenceWithQuality.h"
+#include "Seq/Sequence.h"
+#include "Seq/SiteExceptions.h"
+#include "Seq/CodonSiteTools.h"
+#include "Seq/SiteTools.h"
+#include "Seq/SequenceTools.h"
+#include "Seq/SymbolList.h"
+#include "Seq/StringSequenceTools.h"
