@@ -1,20 +1,21 @@
-#include "Alphabet/AlphabetState.h"
-#include "Alphabet/CaseMaskedAlphabet.h"
-#include "Alphabet/DNA.h"
-#include "Alphabet/RNA.h"
-#include "Alphabet/Alphabet.h"
-#include "Alphabet/NucleicAlphabet.h"
-#include "Alphabet/ProteicAlphabetState.h"
-#include "Alphabet/AlphabetTools.h"
-#include "Alphabet/ProteicAlphabet.h"
-#include "Alphabet/EchinodermMitochondrialCodonAlphabet.h"
-#include "Alphabet/VertebrateMitochondrialCodonAlphabet.h"
-#include "Alphabet/AlphabetExceptions.h"
-#include "Alphabet/DefaultAlphabet.h"
-#include "Alphabet/AbstractAlphabet.h"
-#include "Alphabet/NucleicAlphabetState.h"
 #include "Alphabet/CodonAlphabet.h"
-#include "Alphabet/LetterAlphabet.h"
-#include "Alphabet/InvertebrateMitochondrialCodonAlphabet.h"
+#include "Alphabet/Alphabet.h"
 #include "Alphabet/WordAlphabet.h"
 #include "Alphabet/StandardCodonAlphabet.h"
+#include "Alphabet/AbstractAlphabet.h"
+#include "Alphabet/YeastMitochondrialCodonAlphabet.h"
+#include "Alphabet/EchinodermMitochondrialCodonAlphabet.h"
+#include "Alphabet/InvertebrateMitochondrialCodonAlphabet.h"
+#include "Alphabet/NucleicAlphabet.h"
+#include "Alphabet/CaseMaskedAlphabet.h"
+#include "Alphabet/RNA.h"
+#include "Alphabet/ProteicAlphabet.h"
+#include "Alphabet/ProteicAlphabetState.h"
+#include "Alphabet/AlphabetExceptions.h"
+#include "Alphabet/DNA.h"
+#include "Alphabet/DefaultAlphabet.h"
+#include "Alphabet/AlphabetState.h"
+#include "Alphabet/AlphabetTools.h"
+#include "Alphabet/LetterAlphabet.h"
+#include "Alphabet/NucleicAlphabetState.h"
+#include "Alphabet/VertebrateMitochondrialCodonAlphabet.h"
