@@ -1,14 +1,14 @@
-#include "Container/VectorSequenceContainer.h"
-#include "Container/OrderedSequenceContainer.h"
-#include "Container/SiteContainer.h"
-#include "Container/MapSequenceContainer.h"
-#include "Container/SequenceContainerTools.h"
 #include "Container/SiteContainerExceptions.h"
 #include "Container/CompressedVectorSiteContainer.h"
-#include "Container/AlignedSequenceContainer.h"
-#include "Container/SequenceContainer.h"
-#include "Container/AbstractSequenceContainer.h"
-#include "Container/SiteIterator.h"
-#include "Container/SequenceContainerExceptions.h"
 #include "Container/SiteContainerTools.h"
+#include "Container/SiteContainer.h"
+#include "Container/SequenceContainerExceptions.h"
+#include "Container/AlignedSequenceContainer.h"
+#include "Container/OrderedSequenceContainer.h"
 #include "Container/VectorSiteContainer.h"
+#include "Container/SequenceContainer.h"
+#include "Container/SiteIterator.h"
+#include "Container/AbstractSequenceContainer.h"
+#include "Container/SequenceContainerTools.h"
+#include "Container/MapSequenceContainer.h"
+#include "Container/VectorSequenceContainer.h"
