@@ -1,5 +1,6 @@
-#include "GeneticCode/EchinodermMitochondrialGeneticCode.h"
+#include "GeneticCode/YeastMitochondrialGeneticCode.h"
 #include "GeneticCode/GeneticCode.h"
-#include "GeneticCode/VertebrateMitochondrialGeneticCode.h"
 #include "GeneticCode/StandardGeneticCode.h"
+#include "GeneticCode/VertebrateMitochondrialGeneticCode.h"
+#include "GeneticCode/EchinodermMitochondrialGeneticCode.h"
 #include "GeneticCode/InvertebrateMitochondrialGeneticCode.h"
