@@ -1,25 +1,25 @@
+#include "Io/PhredPoly.h"
+#include "Io/ISequence.h"
+#include "Io/IoSequenceFactory.h"
+#include "Io/MafAlignmentParser.h"
+#include "Io/AbstractISequence2.h"
+#include "Io/Fasta.h"
+#include "Io/NexusTools.h"
+#include "Io/IoSequence.h"
+#include "Io/ISequenceStream.h"
+#include "Io/AbstractISequence.h"
+#include "Io/MafIterator.h"
+#include "Io/OSequenceStream.h"
+#include "Io/MaseTools.h"
+#include "Io/Dcse.h"
+#include "Io/Mase.h"
+#include "Io/Stockholm.h"
+#include "Io/NexusIoSequence.h"
+#include "Io/IoSequenceStream.h"
+#include "Io/PhredPhd.h"
+#include "Io/GenBank.h"
 #include "Io/Phylip.h"
 #include "Io/SequenceFileIndex.h"
-#include "Io/NexusTools.h"
-#include "Io/MafIterator.h"
-#include "Io/PhredPhd.h"
-#include "Io/AbstractISequence2.h"
-#include "Io/PhredPoly.h"
-#include "Io/IoSequenceFactory.h"
-#include "Io/IoSequenceStream.h"
 #include "Io/OSequence.h"
-#include "Io/AbstractISequence.h"
-#include "Io/OSequenceStream.h"
-#include "Io/NexusIoSequence.h"
-#include "Io/Dcse.h"
-#include "Io/ISequenceStream.h"
-#include "Io/MafAlignmentParser.h"
 #include "Io/Clustal.h"
-#include "Io/Stockholm.h"
-#include "Io/ISequence.h"
-#include "Io/Fasta.h"
-#include "Io/MaseTools.h"
-#include "Io/IoSequence.h"
 #include "Io/AbstractOSequence.h"
-#include "Io/Mase.h"
-#include "Io/GenBank.h"
