@@ -1,14 +1,14 @@
-#include "StateProperties/AAIndex1Entry.h"
-#include "StateProperties/GranthamAAVolumeIndex.h"
-#include "StateProperties/KleinAANetChargeIndex.h"
-#include "StateProperties/SimpleIndexDistance.h"
 #include "StateProperties/AAIndex2Entry.h"
-#include "StateProperties/BLOSUM50.h"
-#include "StateProperties/GranthamAAPolarityIndex.h"
 #include "StateProperties/GranthamAAChemicalDistance.h"
-#include "StateProperties/DefaultNucleotideScore.h"
-#include "StateProperties/AAChargeIndex.h"
+#include "StateProperties/KleinAANetChargeIndex.h"
+#include "StateProperties/GranthamAAPolarityIndex.h"
 #include "StateProperties/MiyataAAChemicalDistance.h"
-#include "StateProperties/AlphabetIndex2.h"
+#include "StateProperties/AAIndex1Entry.h"
 #include "StateProperties/SimpleScore.h"
+#include "StateProperties/GranthamAAVolumeIndex.h"
+#include "StateProperties/AlphabetIndex2.h"
+#include "StateProperties/AAChargeIndex.h"
+#include "StateProperties/SimpleIndexDistance.h"
 #include "StateProperties/AlphabetIndex1.h"
+#include "StateProperties/DefaultNucleotideScore.h"
+#include "StateProperties/BLOSUM50.h"
