@@ -1,3 +1,6 @@
+12/10/10 Benoît Nabholz
+* Added yeast mitochondrial codon alphabet and genetic code.
+
 20/09/10 Julien Dutheil
 * Reorganization of the code for version 2.0.
 
